--- a/ocr/src/main/resources/templates/file_copy.html
+++ b/ocr/src/main/resources/templates/file_copy.html
@@ -18,7 +18,6 @@
         height: 400px;
         border: 1px solid;
         float: left;
-        padding: 10px;
     }
 
     #rightDiv {
@@ -38,8 +37,8 @@
 <body>
 <h1 th:inlines="text">文件上传</h1>
 <div id="leftDiv">
-    <form action="" method="post" enctype="multipart/form-data">
-        <p>选择文件: <input type="file" class="img-btn" name="fileName"/> <input type="button" id="submit" value="提交"/></p>
+    <form action="fileUpload" method="post" enctype="multipart/form-data">
+        <p>选择文件: <input type="file" class="img-btn" name="fileName"/> <input type="submit" value="提交"/></p>
     </form>
     <div class="img-container" id="img-container">
     </div>
@@ -52,15 +51,8 @@
         <input class="param" type="text" value="#F00" id="strokeColor" hidden>
         起始点坐标：X: <input class="param" type="text" value="0" id="left"> / Y:<input class="param" type="text" value="0"
                                                                                   id="top"><br/>
-        筒子页起始：X: <input class="param" type="text" value="0" id="gapStart"> / Y:<input class="param" type="text"
-                                                                                      value="0"
-                                                                                      id="gapStartY"><br/>
-        筒子页结束：X: <input class="param" type="text" value="0" id="gapEnd"> / Y:<input class="param" type="text"
-                                                                                    value="0"
-                                                                                    id="gapEndY"><br/>
-        列数(左)：<input class="param" type="text" value="6" id="column"><br/>
-        列数(右)：<input class="param" type="text" value="0" id="columnRight">
-
+        分栏间隔：<input class="param" type="text" value="45" id="offset"><br/>
+        是否筒子页：<input type="checkbox" value="0"/>
     </form>
 </div>
 
@@ -104,7 +96,6 @@
         } else {
             imgDiv.innerHTML = '<div class="img" style="filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod=scale,src=\'' + fileInput.value + '\)\';"></div>';
         }
-
     }
 
     /MSIE\s*(\d+)/i.test(navigator.userAgent);
@@ -139,16 +130,12 @@
         // 画布大小
         var width = $("#previmg").width(), height = $("#previmg").height();
         // 起始点坐标、间距、栏数
-        var left = parseInt($("#left").val()),
-            top = parseInt($("#top").val()),
-            column = parseInt($("#column").val()),
-            gapStart = parseInt($("#gapStart").val()),
-            gapEnd = parseInt($("#gapEnd").val()),
-            columnRight = parseInt($("#columnRight").val());
-
+        var left = parseInt(document.getElementById('left').value),
+            top = parseInt(document.getElementById('top').value),
+            offset = parseInt(document.getElementById('offset').value);
         // 线条样式
-        var strokeColor = $("#strokeColor").val(),
-            strokeWidth = $("#strokeWidth").val();
+        var strokeColor = document.getElementById('strokeColor').value,
+            strokeWidth = parseInt(document.getElementById('strokeWidth').value);
 
         if (paper) {
             paper.clear();
@@ -159,23 +146,9 @@
 
         // 画坚线
         var path = "";
-
-        if (gapStart > 0 && gapEnd > 0) {
-            var offsetLeft = (gapStart - left) / column;
-            for (var i = 0; i <= column; i++) {
-                path += 'M' + (i * offsetLeft + left) + ',' + top + 'V' + height;
-            }
-            var offsetRigth = (width - gapEnd) / columnRight;
-            for (var i = 0; i < column; i++) {
-                path += 'M' + (i * offsetRigth + gapEnd) + ',' + top + 'V' + height;
-            }
-        } else {
-            var offsetLeft = (width - left) / column;
-            for (var i = 0; i < column; i++) {
-                path += 'M' + (i * offsetLeft + left) + ',' + top + 'V' + height;
-            }
+        for (var i = 0, len = (width - left) / offset; i < len; i++) {
+            path += 'M' + (i * offset + left) + ',' + top + 'V' + height;
         }
-
         paper.path(path).attr({
             'stroke': strokeColor,
             'stroke-width': strokeWidth
@@ -190,36 +163,6 @@
             }
         }
     }
-
-    $("#submit").click(function () {
-        var a = new FormData();
-        a.append("fileName", $(".img-btn")[0].files[0]);
-        a.append("left", $("#left").val());
-        a.append("top", $("#top").val());
-        a.append("column", $("#column").val());
-        a.append("gapStart", $("#gapStart").val());
-        a.append("gapEnd", $("#gapEnd").val());
-        a.append("columnRight", $("#columnRight").val());
-        a.append("gapStartY", $("#gapStartY").val());
-        a.append("gapEndY", $("#gapEndY").val());
-        a.append("height", $("#previmg").height());
-        $.ajax({
-            url: "fileUpload",
-            xhrFields: {
-                withCredentials: true
-            },
-            type: "POST",
-            cache: false,
-            data: a,
-            processData: false,
-            contentType: false,
-            async: false,
-            success: function (result) {
-                console.log(result);
-                $("#result").val(result.data)
-            }
-        })
-    });
 
 </script>
 </body>
