--- a/ocr/src/main/resources/templates/tessFile.html
+++ b/ocr/src/main/resources/templates/tessFile.html
@@ -14,6 +14,8 @@
     <input id="pngFile" type="file" name="fileName">
     <h1>Upload Tif Picture</h1>
     <input id="tifFile" type="file" name="fileName">
+    <h1>Picture text</h1>
+    <textarea name="text" hidden> </textarea>
 </form>
 </body>
 </html>
