integreted Swagger with SpringBoot

--- a/ocr/src/main/resources/templates/tessFile.html
+++ b/ocr/src/main/resources/templates/tessFile.html
@@ -9,14 +9,14 @@
     <button onclick="showTrain()">训练</button>
     <button onclick="showTest()">测试</button>
 </div>
-<form id="trainForm" action="mutilTessFile" method="post" enctype="multipart/form-data">
+<form id="trainForm" action="trainTessFile" method="post" enctype="multipart/form-data">
     训练语言<input name="lang" placeholder="lang" value="chiTra">
     训练字体<input name="fontFamily" placeholder="fontFamily" value="SimSun">
     <input type="submit" value="提交">
     <h1>Upload Png Picture</h1>
     <input id="pngFile" type="file" name="fileName">
-    <h1>Upload Tif Picture</h1>
-    <input id="tifFile" type="file" name="fileName">
+    <!--<h1>Upload Tif Picture</h1>
+    <input id="tifFile" type="file" name="fileName">-->
 </form>
 
 <div id="testForm">
